[package]
name = "anchor-spl"
version = "0.18.0"
authors = [ "Serum Foundation <foundation@projectserum.com>" ]
edition = "2018"
license = "Apache-2.0"
description = "CPI clients for SPL programs"

[features]
devnet = [ ]
dex = [ ]



  [dependencies.anchor-lang]
  path = "../lang"
  version = "0.18.0"
  features = [ "derive" ]

  [dependencies.serum_dex_0_4_0]
  path ="../../bh-serum-0.4.0"
  version = "0.4.0"
  features = [ "no-entrypoint" ]


  [dependencies.safe-associated-token-account]
  version="1.0.8"
  features = [ "no-entrypoint" ]

  [dependencies.safecoin-program]
  version="1.7.17"

  [dependencies.safe-token]
  features = [ "no-entrypoint" ]
  version="3.2.0"

  [dependencies]
lazy_static = "1.4.0"
