[package]
name = "permissioned-markets"
version = "0.1.0"
description = "Created with Anchor"
edition = "2018"

[lib]
crate-type = [ "cdylib", "lib" ]
name = "permissioned_markets"

[features]
no-entrypoint = [ ]
no-idl = [ ]
cpi = [ "no-entrypoint" ]
default = [ ]

[dependencies.anchor-lang]
path = "../../../../lang"

[dependencies.anchor-spl]
path = "../../../../spl"

[dependencies.serum_dex]
path = "../../deps/serum-dex/dex"
features = [ "no-entrypoint" ]

[dependencies.safecoin-program]
version="1.7.17"

[dependencies.safe-token]
features = [ "no-entrypoint" ]
version="3.2.0"
